2005-04-05 Quentin Mathe <qmathe@club-internet.fr>

	Note: tests suite fixed now (but with GNUstep, currently interrupted by 
	"___moddi3 undefined symbol" error).
	* Headers/LuceneKit.h: Added (LuceneKit umbrella header).
	* Source/GNUmakefile: Put -DHAVE_UKTEST in ADDITIONAL_OBJCFLAGS and not 
	ADDITIONAL_LDFLAGS (moved in GNUmakefile.preamble now).
	* GNUmakefile.preamble: Added.
	* GNUmakefile:
	* Source/GNUmakefile:
	* Source/Analysis/GNUmakefile:
	* Source/Document/GNUmakefile:
	* Source/Index/GNUmakefile:
	* Source/Java/GNUmakefile:
	* Source/Search/GNUmakefile:
	* Source/Store/GNUmakefile:
	* Source/Util/GNUmakefile:
	Moved shared variables like ADDITIONAL_OBJCFLAGS in GNUmakefile.preamble at 
	LuceneKit top level. Disabled #import related warnings.
	* Headers/Util/NSString+Additions.h: Replaced #import directive by #include.

2005-04-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Index/LCIndexInput.m: Deal with string length properly.
	* Source/Index/TestTermVectorsReader.m: New test units.

2005-04-05 Quentin Mathe <qmathe@club-internet.fr>

	Note: LuceneKit compilation fixed now.
	* Source/Index/LCTermInfosWriter.m: Fixed #include directive in order to 
	reference "NSString+Additions.h" and not "NSString_Additions.h".
	(-init): Replaced incorrect C boolean 'false' by Objective-C version 'NO'.
	* Source/Index/LCTermVectorWriter.m: Fixed #include directive in order to 
	reference "NSString+Additions.h" and not "NSString_Additions.h".
	* Source/Store/LCRAMDirectory.m (-touchFile):: Replaced [NSData data] by
	[NSDate date] to accept -timeIntervalSince1970 method call.
	* Source/Util/GNUmakefile: Replaced reference to "NSString_Additions.m"
	by the correct one "NSString+Additions.m".

2005-04-05 Quentin Mathe <qmathe@club-internet.fr>

	Warning! compilation broken.
	* Headers/Analysis:
	* Headers/Document:
	* Headers/Index:
	* Headers/Store:
	* Headers/Util:
	* Source/Analysis:
	* Source/Document:
	* Source/Java:
	* Source/Search:
	* Source/Store: