@@ -1,3 +1,11 @@
+2005-04-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+	* Source/Index/TestSegmentMerger.h:
+	* Source/Index/TestSegmentMerger.m: 
+	Test unit for LCSegmentMerger
+	* Current test result: 
+	Result: 21 classes, 48 methods, 335447 tests, 0 failed
+
 2005-04-05 Quentin Mathe <qmathe@club-internet.fr>
 
 	Note: tests suite fixed now (but with GNUstep, currently interrupted by 
